--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Kanit:wght@100;200;300;400&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Exo:wght@100;200;300;400;600;700&family=Kanit:wght@100;200;300;400&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" type="text/css" href="./assets/css/reset.css" />
@@ -16,7 +16,6 @@
   </head>
 
   <body>
-
     <nav class="navbar">
       <ul>
         <li><a href="#home">Home</a></li>
@@ -29,7 +28,7 @@
 
     <section id="home">
       <div class="main">
-        <h1 class="header">
+        <h1 class="heading">
           I AM <br />
           YI ELENA LIU
         </h1>
@@ -37,28 +36,37 @@
     </section>
 
     <section id="about">
-      <h2>About</h2>
-      <hr>
-      <div><img src="./Assets/images/recent-photo2.JPG" alt="Elena Recent Photo"/></div>
-      <p>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deleniti hic
-        voluptas vitae eaque, odit reprehenderit nemo? Eos officia voluptates
-        perspiciatis quo, laudantium, odit tempora explicabo magni, totam dolor
-        maiores cumque.Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-        Deleniti hic voluptas vitae eaque, odit reprehenderit nemo? Eos officia
-        voluptates perspiciatis quo, laudantium, odit tempora explicabo magni,
-        totam dolor maiores cumque.
-      </p>
+      <div id="avatar">
+        <h1 class="heading">About</h1>
+        <hr>
+        <img
+          id="me"
+          src="./Assets/css/recent-photo.JPG"
+          alt="Elena Recent Photo"
+        />
+        <div id="intro">
+          <h2>Yi Elena Liu</h2>
+          <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deleniti
+            hic voluptas vitae eaque, odit reprehenderit nemo? Eos officia
+            voluptates perspiciatis quo, laudantium, odit tempora explicabo
+            magni, totam dolor maiores cumque.Lorem ipsum, dolor sit amet
+            consectetur adipisicing elit. Deleniti hic voluptas vitae eaque,
+            odit reprehenderit nemo? Eos officia voluptates perspiciatis quo,
+            laudantium, odit tempora explicabo magni, totam dolor maiores
+            cumque.
+          </p>
+        </div>
+      </div>
     </section>
 
-    <!-- <section id="work">
-        <h2>Work</h2>
+    <section id="work">
+        <h2 class="heading">Work</h2>
         <hr>
         <div class="card">
             <img src="./Assets/images/pic1.jpg" alt="placeholder1"/>
-            <div class="card-title">
-                <h5>Website Refactor</h5>
-            </div>
+            <h5 class="card-title">Website Refactor</h5>
+            
         </div>
         <div class="card">
             <img src="./Assets/images/pic3.jpg" alt="placeholder2"/>
@@ -84,7 +92,7 @@
                 <h5>Website Refactor</h5>
             </div>
         </div>
-      </section> -->
+      </section>
 
     <!-- 
       <section id="contact">
