draft3 updates on html and css

--- a/index.html
+++ b/index.html
@@ -37,8 +37,7 @@
 
     <section id="about">
       <div id="avatar">
-        <h1 class="heading">About</h1>
-        <hr>
+        <h2 class="heading">About</h2>
         <img
           id="me"
           src="./Assets/css/recent-photo.JPG"
@@ -50,7 +49,9 @@
             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deleniti
             hic voluptas vitae eaque, odit reprehenderit nemo? Eos officia
             voluptates perspiciatis quo, laudantium, odit tempora explicabo
-            magni, totam dolor maiores cumque.Lorem ipsum, dolor sit amet
+            magni, totam dolor maiores cumque. 
+            <hr>
+            Lorem ipsum, dolor sit amet
             consectetur adipisicing elit. Deleniti hic voluptas vitae eaque,
             odit reprehenderit nemo? Eos officia voluptates perspiciatis quo,
             laudantium, odit tempora explicabo magni, totam dolor maiores
@@ -61,53 +62,84 @@
     </section>
 
     <section id="work">
-        <h2 class="heading">Work</h2>
-        <hr>
-        <div class="card">
-            <img src="./Assets/images/pic1.jpg" alt="placeholder1"/>
-            <h5 class="card-title">Website Refactor</h5>
-            
+      <h2 class="heading">Work</h2>
+      <div class="card">
+        <a
+          href="https://github.com/elenaliu0415/marketing-company-web-refactor"
+          rel="project#1 link"
+          target="blank"
+          ><img
+            id="first-project"
+            src="./Assets/images/pic1.jpg"
+            alt="placeholder1"
+        /></a>
+        <div class="card-title">
+          <h5>Website Refactor</h5>
+          <p>Marketing Agency Landing Page Refactoring</p>
         </div>
-        <div class="card">
-            <img src="./Assets/images/pic3.jpg" alt="placeholder2"/>
-            <div class="card-title">
-                <h5>Website Refactor</h5>
-            </div>
+      </div>
+      <div class="card">
+        <img src="./Assets/images/pic3.jpg" alt="placeholder2" />
+        <div class="card-title">
+          <h5>Personal Portfolio</h5>
+          <p>HTML / CSS</p>
         </div>
-        <div class="card">
-            <img src="./Assets/images/pic4.jpg" alt="placeholder3"/>
-            <div class="card-title">
-                <h5>Website Refactor</h5>
-            </div>
+      </div>
+      <div class="card">
+        <img src="./Assets/images/pic4.jpg" alt="placeholder3" />
+        <div class="card-title">
+          <h5>Project #3</h5>
+          <p>Project #3 Describtion</p>
         </div>
-        <div class="card">
-            <img src="./Assets/images/pic6.jpg" alt="placeholder4"/>
-            <div class="card-title">
-                <h5>Website Refactor</h5>
-            </div>
+      </div>
+      <div class="card">
+        <img src="./Assets/images/pic6.jpg" alt="placeholder4" />
+        <div class="card-title">
+          <h5>Project #4</h5>
+          <p>Project #4 Describtion</p>
         </div>
-        <div class="card">
-            <img src="./Assets/images/pic9.jpg" alt="placeholder5"/>
-            <div class="card-title">
-                <h5>Website Refactor</h5>
-            </div>
+      </div>
+      <div class="card">
+        <img src="./Assets/images/pic9.jpg" alt="placeholder5" />
+        <div class="card-title">
+          <h5>Project #5</h5>
+          <p>Project #5 Describtion</p>
         </div>
-      </section>
+      </div>
+    </section>
 
-    <!-- 
-      <section id="contact">
-        <h2>Contact</h2>
-        <hr>
-        <h6>917-678-4276</h6>
-        <h6>elenaliu0415@gmail.com</h6>
-        <a href="https://github.com/elenaliu0415" target="_blank" ><img src="./Assets/images/githubicon.png" alt="GitHub Icon" style="width:40px;height:40px;"/></a>
-        <a href="https://github.com/elenaliu0415" target="_blank"><img src="./Assets/images/instagram-icon.png" alt="Instagram Icon" style="width:46px;height:46px;"/></a>
-        <a href="https://github.com/elenaliu0415" target="_blank"><img src="./Assets/images/linkedin-icon.png" alt="Linkedin Icon" style="width:40px;height:40px;"/></a>
-      </section>
+    <section id="contact">
+      <h2 class="heading">Contact</h2>
+      <h6>917-678-4276</h6>
+      <h6>elenaliu0415@gmail.com</h6>
+      <a href="https://github.com/elenaliu0415" target="_blank"
+        ><img
+          src="./Assets/images/githubicon.png"
+          alt="GitHub Icon"
+          style="width: 40px; height: 40px"
+      /></a>
+      <a href="https://github.com/elenaliu0415" target="_blank"
+        ><img
+          src="./Assets/images/instagram-icon.png"
+          alt="Instagram Icon"
+          style="width: 46px; height: 46px"
+      /></a>
+      <a href="https://github.com/elenaliu0415" target="_blank"
+        ><img
+          src="./Assets/images/linkedin-icon.png"
+          alt="Linkedin Icon"
+          style="width: 40px; height: 40px"
+      /></a>
+    </section>
 
-      <footer>
-        <h6>MADE WITH ♥ AND PASSION</h6>
-        ©YI ELENA LIU | ALL RIGHTS RESERVED
-      </footer> -->
+    <section id="resume">
+        <h2 class="heading">Resume</h2>
+        <h3>Coming Soon</h3>
+    </section>
+
+    <footer>
+      <h6>MADE WITH ♥ AND PASSION</h6>
+      ©YI ELENA LIU | ALL RIGHTS RESERVED
+    </footer>
   </body>
 </html>
