Both html and css on desktop screen mode are completed

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     <section id="home">
       <div class="main">
-        <h1 class="heading">
+        <h1>
           I AM <br />
           YI ELENA LIU
         </h1>
@@ -36,26 +36,22 @@
     </section>
 
     <section id="about">
-      <div id="avatar">
-        <h2 class="heading">About</h2>
+      <h2 class="heading">About</h2>
+      <div id="avatar" class="contents">
         <img
           id="me"
           src="./Assets/css/recent-photo.JPG"
           alt="Elena Recent Photo"
         />
         <div id="intro">
-          <h2>Yi Elena Liu</h2>
           <p>
             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deleniti
             hic voluptas vitae eaque, odit reprehenderit nemo? Eos officia
             voluptates perspiciatis quo, laudantium, odit tempora explicabo
-            magni, totam dolor maiores cumque. 
-            <hr>
-            Lorem ipsum, dolor sit amet
-            consectetur adipisicing elit. Deleniti hic voluptas vitae eaque,
-            odit reprehenderit nemo? Eos officia voluptates perspiciatis quo,
-            laudantium, odit tempora explicabo magni, totam dolor maiores
-            cumque.
+            magni, totam dolor maiores cumque.
+            <br /><br />
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deleniti
+            hic voluptas vitae eaque, odit reprehenderit nemo?
           </p>
         </div>
       </div>
@@ -63,78 +59,69 @@
 
     <section id="work">
       <h2 class="heading">Work</h2>
-      <div class="card">
-        <a
-          href="https://github.com/elenaliu0415/marketing-company-web-refactor"
-          rel="project#1 link"
-          target="blank"
-          ><img
-            id="first-project"
-            src="./Assets/images/pic1.jpg"
-            alt="placeholder1"
-        /></a>
-        <div class="card-title">
-          <h5>Website Refactor</h5>
-          <p>Marketing Agency Landing Page Refactoring</p>
+      <div class="card-container contents">
+        <div class="card">
+          <a
+            href="https://github.com/elenaliu0415/marketing-company-web-refactor"
+            rel="project#1 link"
+            target="blank"
+            ><img
+              id="first-project"
+              src="./Assets/images/pic1.jpg"
+              alt="placeholder1"
+          /></a>
+          <div class="card-title">
+            <h5>Website Refactor</h5>
+            <p>Marketing Agency Landing Page Refactoring</p>
+          </div>
         </div>
-      </div>
-      <div class="card">
-        <img src="./Assets/images/pic3.jpg" alt="placeholder2" />
-        <div class="card-title">
-          <h5>Personal Portfolio</h5>
-          <p>HTML / CSS</p>
+        <div class="card">
+          <img src="./Assets/images/pic3.jpg" alt="placeholder2" />
+          <div class="card-title">
+            <h5>Personal Portfolio</h5>
+            <p>HTML / CSS</p>
+          </div>
         </div>
-      </div>
-      <div class="card">
-        <img src="./Assets/images/pic4.jpg" alt="placeholder3" />
-        <div class="card-title">
-          <h5>Project #3</h5>
-          <p>Project #3 Describtion</p>
+        <div class="card">
+          <img src="./Assets/images/pic5.jpg" alt="placeholder3" />
+          <div class="card-title">
+            <h5>Project #3</h5>
+            <p>Project #3 Describtion</p>
+          </div>
         </div>
-      </div>
-      <div class="card">
-        <img src="./Assets/images/pic6.jpg" alt="placeholder4" />
-        <div class="card-title">
-          <h5>Project #4</h5>
-          <p>Project #4 Describtion</p>
+        <div class="card">
+          <img src="./Assets/images/pic6.jpg" alt="placeholder4" />
+          <div class="card-title">
+            <h5>Project #4</h5>
+            <p>Project #4 Describtion</p>
+          </div>
         </div>
-      </div>
-      <div class="card">
-        <img src="./Assets/images/pic9.jpg" alt="placeholder5" />
-        <div class="card-title">
-          <h5>Project #5</h5>
-          <p>Project #5 Describtion</p>
+        <div class="card">
+          <img src="./Assets/images/pic9.jpg" alt="placeholder5" />
+          <div class="card-title">
+            <h5>Project #5</h5>
+            <p>Project #5 Describtion</p>
+          </div>
         </div>
       </div>
     </section>
 
     <section id="contact">
       <h2 class="heading">Contact</h2>
-      <h6>917-678-4276</h6>
-      <h6>elenaliu0415@gmail.com</h6>
-      <a href="https://github.com/elenaliu0415" target="_blank"
-        ><img
-          src="./Assets/images/githubicon.png"
-          alt="GitHub Icon"
-          style="width: 40px; height: 40px"
-      /></a>
-      <a href="https://github.com/elenaliu0415" target="_blank"
-        ><img
-          src="./Assets/images/instagram-icon.png"
-          alt="Instagram Icon"
-          style="width: 46px; height: 46px"
-      /></a>
-      <a href="https://github.com/elenaliu0415" target="_blank"
-        ><img
-          src="./Assets/images/linkedin-icon.png"
-          alt="Linkedin Icon"
-          style="width: 40px; height: 40px"
-      /></a>
+      <div class="contents">
+        <h6><a href="#">917-678-4276</a></h6>
+        <h6><a href="#">elenaliu0415@gmail.com</a></h6>
+        <h6><a href="https://github.com/elenaliu0415" target="_blank">GitHub</a></h6>
+        <h6><a href="https://www.instagram.com/" target="_blank">Instagram</a></h6>
+        <h6><a href="https://www.linkedin.com/" target="_blank">Linkedin</a></h6>
+      </div>
     </section>
 
     <section id="resume">
-        <h2 class="heading">Resume</h2>
+      <h2 class="heading">Resume</h2>
+      <div class="contents">
         <h3>Coming Soon</h3>
+      </div>
     </section>
 
     <footer>
