media query updated on tablet screen mode

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
       href="https://fonts.googleapis.com/css2?family=Exo:wght@100;200;300;400;600;700&family=Kanit:wght@100;200;300;400&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" type="text/css" href="./assets/css/reset.css" />
-    <link rel="stylesheet" type="text/css" href="./assets/css/style.css" />
+    <link rel="stylesheet" type="text/css" href="./Assets/css/reset.css" />
+    <link rel="stylesheet" type="text/css" href="./Assets/css/style.css" />
   </head>
 
   <body>
