updated github links for project 1 and weatherdashboard, downloadable resume added

--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" type="text/css" href="./Assets/css/reset.css" />
+    <script
+      src="https://kit.fontawesome.com/a9e4263e9f.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" type="text/css" href="./Assets/css/style.css" />
   </head>
 
@@ -22,7 +26,7 @@
         <li><a href="#about">About</a></li>
         <li><a href="#work">Work</a></li>
         <li><a href="#contact">Contact</a></li>
-        <li><a href="#resume">Resume</a></li>
+        <li><a href="./Yi_Liu_Resume_15.PDF" target="blank">Resume</a></li>
       </ul>
     </nav>
 
@@ -62,24 +66,39 @@
       <div class="card-container contents">
         <div class="card">
           <a
-            href="https://github.com/elenaliu0415/marketing-company-web-refactor"
+            href="https://ericaleesnyder.github.io/meal-search-engine/"
             rel="project#1 link"
             target="blank"
             ><img
               id="first-project"
-              src="./Assets/images/pic1.jpg"
+              src="./Assets/images/project-1-screenshot.png"
               alt="placeholder1"
           /></a>
           <div class="card-title">
-            <h5>Website Refactor</h5>
-            <p>Marketing Agency Landing Page Refactoring</p>
+            <h5>Rapid Recipes!</h5>
+            <a
+              href="https://github.com/ericaleesnyder/meal-search-engine"
+              target="blank"
+              >GitHub Pages</a
+            >
           </div>
         </div>
         <div class="card">
-          <img src="./Assets/images/pic3.jpg" alt="placeholder2" />
+          <a
+            href="https://elenaliu0415.github.io/weather-dashboard/"
+            rel="project#1 link"
+            target="blank"
+            ><img
+              src="./Assets/images/weather-dashboard-screenshot.png"
+              alt="placeholder2"
+          /></a>
           <div class="card-title">
-            <h5>Personal Portfolio</h5>
-            <p>HTML / CSS</p>
+            <h5>Weather Dashboard</h5>
+            <a
+              href="https://github.com/elenaliu0415/weather-dashboard"
+              target="blank"
+              >GitHub Pages</a
+            >
           </div>
         </div>
         <div class="card">
@@ -109,20 +128,28 @@
     <section id="contact">
       <h2 class="heading">Contact</h2>
       <div class="contents">
-        <h6><a href="#">917-678-4276</a></h6>
-        <h6><a href="#">elenaliu0415@gmail.com</a></h6>
-        <h6><a href="https://github.com/elenaliu0415" target="_blank">GitHub</a></h6>
-        <h6><a href="https://www.instagram.com/" target="_blank">Instagram</a></h6>
-        <h6><a href="https://www.linkedin.com/" target="_blank">Linkedin</a></h6>
+        <i class="fas fa-mobile-alt"><a href="#">917-678-4276</a></i>
+        <i class="fas fa-envelope"><a href="#">elenaliu0415@gmail.com</a></i>
+        <i class="fab fa-github-square">
+          <a href="https://github.com/elenaliu0415" target="_blank">GitHub</a>
+        </i>
+        <i class="fab fa-instagram-square">
+          <a href="https://www.instagram.com/" target="_blank">Instagram</a>
+        </i>
+        <i class="fab fa-linkedin">
+          <a href="https://www.linkedin.com/in/yi-elena-liu" target="_blank"
+            >Linkedin</a
+          >
+        </i>
       </div>
     </section>
 
-    <section id="resume">
+    <!-- <section id="resume">
       <h2 class="heading">Resume</h2>
       <div class="contents">
         <h3>Coming Soon</h3>
       </div>
-    </section>
+    </section> -->
 
     <footer>
       <h6>MADE WITH ♥ AND PASSION</h6>
